package ua.khpi.oop.lab08;

public interface Bookable {
    void book();
}