package ua.khpi.oop.lab08;

public interface Cleanable {
    void clean();
}