package ua.khpi.oop.lab08;

public interface Reservable {
    void reserve();
}